rules: Add systemic tag
Signed-off-by: Simon Bennetts <psiinon@gmail.com>